// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`travel plan delivery replay snapshot > replays direct mode into stable delivery html 1`] = `
{
  "deliveryBundle": {
    "artifact": {
      "answer": "",
      "budget": {
        "executionBudget": {},
        "fallbackSteps": 0,
        "staleResultCount": 0,
        "summary": {},
      },
      "intent": {
        "confidence": null,
        "detail": {},
        "entities": {},
        "name": "general",
      },
      "itinerary": {
        "explanation": "",
        "planId": null,
        "steps": [],
        "validationErrors": [],
        "validationStatus": "pass",
      },
      "metadata": {},
      "reasoning": "",
      "research": {
        "destinations": [],
        "evidence": [],
        "sourceTools": [],
        "summary": "",
      },
      "toolsUsed": [],
      "verification": {
        "issues": [],
        "passed": null,
        "refreshTargets": [],
        "shouldRetry": false,
        "summary": "",
      },
    },
    "descriptor": {
      "filenameBase": "travel-plan-artifact",
      "htmlDocumentTitle": "旅行方案 | Moyuan Travel Agent",
      "htmlSections": [
        {
          "items": [
            "<text><text>",
          ],
          "key": "summary",
          "title": "行程摘要",
        },
      ],
      "metrics": [],
      "shareContent": "旅行方案
<text><text>",
      "subagentTrail": [],
      "summary": "<text><text>",
      "summaryLines": [],
      "title": "旅行方案",
      "warnings": [],
    },
    "executionReceipt": {},
    "htmlContent": "<!doctype html>
<html lang="zh-CN">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>旅行方案 | Moyuan Travel Agent</title>
    <style>
      body { margin: 0; font-family: "Segoe UI", "PingFang SC", "Hiragino Sans GB", sans-serif; background: #f8fafc; color: #0f172a; }
      main { max-width: 900px; margin: 0 auto; padding: 32px 24px 48px; }
      .hero { border-radius: 24px; padding: 24px 28px; background: linear-gradient(135deg, #082f49 0%, #0f766e 100%); color: #fff; }
      .hero h1 { margin: 0; font-size: 30px; line-height: 1.2; }
      .delivery-summary { margin: 14px 0 0; font-size: 15px; line-height: 1.7; opacity: 0.92; }
      .delivery-section { margin-top: 18px; padding: 18px 20px; border-radius: 18px; background: #fff; border: 1px solid #e2e8f0; }
      .delivery-section h2 { margin: 0 0 10px; font-size: 16px; }
      .delivery-section ul { margin: 0; padding-left: 18px; display: grid; gap: 8px; }
      .delivery-section li { line-height: 1.6; }
    </style>
  </head>
  <body>
    <main>
      <section class="hero">
        <h1>旅行方案</h1>
        <p class="delivery-summary">&lt;text&gt;&lt;text&gt;</p>
      </section>
      
        <section class="delivery-section">
          <h2>行程摘要</h2>
          <ul><li>&lt;text&gt;&lt;text&gt;</li></ul>
        </section>
      
    </main>
  </body>
</html>",
    "schemaVersion": "2026-03-29",
    "share": {
      "content": "旅行方案
<text><text>",
      "title": "旅行方案",
    },
  },
  "descriptor": {
    "filenameBase": "travel-plan-artifact",
    "htmlDocumentTitle": "旅行方案 | Moyuan Travel Agent",
    "htmlSections": [
      {
        "items": [
          "<text><text>",
        ],
        "key": "summary",
        "title": "行程摘要",
      },
    ],
    "metrics": [],
    "shareContent": "旅行方案
<text><text>",
    "subagentTrail": [],
    "summary": "<text><text>",
    "summaryLines": [],
    "title": "旅行方案",
    "warnings": [],
  },
  "html": "<!doctype html>
<html lang="zh-CN">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>旅行方案 | Moyuan Travel Agent</title>
    <style>
      body { margin: 0; font-family: "Segoe UI", "PingFang SC", "Hiragino Sans GB", sans-serif; background: #f8fafc; color: #0f172a; }
      main { max-width: 900px; margin: 0 auto; padding: 32px 24px 48px; }
      .hero { border-radius: 24px; padding: 24px 28px; background: linear-gradient(135deg, #082f49 0%, #0f766e 100%); color: #fff; }
      .hero h1 { margin: 0; font-size: 30px; line-height: 1.2; }
      .delivery-summary { margin: 14px 0 0; font-size: 15px; line-height: 1.7; opacity: 0.92; }
      .delivery-section { margin-top: 18px; padding: 18px 20px; border-radius: 18px; background: #fff; border: 1px solid #e2e8f0; }
      .delivery-section h2 { margin: 0 0 10px; font-size: 16px; }
      .delivery-section ul { margin: 0; padding-left: 18px; display: grid; gap: 8px; }
      .delivery-section li { line-height: 1.6; }
    </style>
  </head>
  <body>
    <main>
      <section class="hero">
        <h1>旅行方案</h1>
        <p class="delivery-summary">&lt;text&gt;&lt;text&gt;</p>
      </section>
      
        <section class="delivery-section">
          <h2>行程摘要</h2>
          <ul><li>&lt;text&gt;&lt;text&gt;</li></ul>
        </section>
      
    </main>
  </body>
</html>",
  "shareContent": "旅行方案
<text><text>",
  "shareTitle": "旅行方案",
}
`;

exports[`travel plan delivery replay snapshot > replays plan mode into stable delivery html 1`] = `
{
  "deliveryBundle": {
    "artifact": {
      "answer": "<text>",
      "budget": {
        "executionBudget": {},
        "fallbackSteps": 0,
        "staleResultCount": 0,
        "summary": {},
      },
      "intent": {
        "confidence": null,
        "detail": {},
        "entities": {},
        "name": "general",
      },
      "itinerary": {
        "explanation": "<text>",
        "planId": "plan-demo",
        "steps": [],
        "validationErrors": [],
        "validationStatus": "pass",
      },
      "metadata": {},
      "reasoning": "",
      "research": {
        "destinations": [],
        "evidence": [],
        "sourceTools": [],
        "summary": "",
      },
      "toolsUsed": [],
      "verification": {
        "issues": [],
        "passed": true,
        "refreshTargets": [],
        "shouldRetry": false,
        "summary": "",
      },
    },
    "descriptor": {
      "filenameBase": "travel-plan-plan-demo",
      "htmlDocumentTitle": "旅行方案 | Moyuan Travel Agent",
      "htmlSections": [
        {
          "items": [
            "计划编号：plan-demo",
            "校验：校验通过",
            "子 Agent：规划 -> 研究 -> 校验",
          ],
          "key": "overview",
          "title": "方案概览",
        },
        {
          "items": [
            "<text>",
          ],
          "key": "summary",
          "title": "行程摘要",
        },
        {
          "items": [
            "规划 -> 研究 -> 校验",
          ],
          "key": "subagents",
          "title": "多 Agent 协作轨迹",
        },
      ],
      "metrics": [
        {
          "label": "计划编号",
          "tone": "default",
          "value": "plan-demo",
        },
        {
          "label": "校验状态",
          "tone": "success",
          "value": "校验通过",
        },
      ],
      "shareContent": "旅行方案
计划编号：plan-demo
校验：校验通过
子 Agent：规划 -> 研究 -> 校验
<text>",
      "subagentTrail": [
        "规划",
        "研究",
        "校验",
      ],
      "summary": "<text>",
      "summaryLines": [
        "计划编号：plan-demo",
        "校验：校验通过",
        "子 Agent：规划 -> 研究 -> 校验",
      ],
      "title": "旅行方案",
      "warnings": [],
    },
    "executionReceipt": {},
    "htmlContent": "<!doctype html>
<html lang="zh-CN">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>旅行方案 | Moyuan Travel Agent</title>
    <style>
      body { margin: 0; font-family: "Segoe UI", "PingFang SC", "Hiragino Sans GB", sans-serif; background: #f8fafc; color: #0f172a; }
      main { max-width: 900px; margin: 0 auto; padding: 32px 24px 48px; }
      .hero { border-radius: 24px; padding: 24px 28px; background: linear-gradient(135deg, #082f49 0%, #0f766e 100%); color: #fff; }
      .hero h1 { margin: 0; font-size: 30px; line-height: 1.2; }
      .delivery-summary { margin: 14px 0 0; font-size: 15px; line-height: 1.7; opacity: 0.92; }
      .delivery-section { margin-top: 18px; padding: 18px 20px; border-radius: 18px; background: #fff; border: 1px solid #e2e8f0; }
      .delivery-section h2 { margin: 0 0 10px; font-size: 16px; }
      .delivery-section ul { margin: 0; padding-left: 18px; display: grid; gap: 8px; }
      .delivery-section li { line-height: 1.6; }
    </style>
  </head>
  <body>
    <main>
      <section class="hero">
        <h1>旅行方案</h1>
        <p class="delivery-summary">&lt;text&gt;</p>
      </section>
      
        <section class="delivery-section">
          <h2>方案概览</h2>
          <ul><li>计划编号：plan-demo</li><li>校验：校验通过</li><li>子 Agent：规划 -&gt; 研究 -&gt; 校验</li></ul>
        </section>
      
        <section class="delivery-section">
          <h2>行程摘要</h2>
          <ul><li>&lt;text&gt;</li></ul>
        </section>
      
        <section class="delivery-section">
          <h2>多 Agent 协作轨迹</h2>
          <ul><li>规划 -&gt; 研究 -&gt; 校验</li></ul>
        </section>
      
    </main>
  </body>
</html>",
    "schemaVersion": "2026-03-29",
    "share": {
      "content": "旅行方案
计划编号：plan-demo
校验：校验通过
子 Agent：规划 -> 研究 -> 校验
<text>",
      "title": "旅行方案",
    },
  },
  "descriptor": {
    "filenameBase": "travel-plan-plan-demo",
    "htmlDocumentTitle": "旅行方案 | Moyuan Travel Agent",
    "htmlSections": [
      {
        "items": [
          "计划编号：plan-demo",
          "校验：校验通过",
          "子 Agent：规划 -> 研究 -> 校验",
        ],
        "key": "overview",
        "title": "方案概览",
      },
      {
        "items": [
          "<text>",
        ],
        "key": "summary",
        "title": "行程摘要",
      },
      {
        "items": [
          "规划 -> 研究 -> 校验",
        ],
        "key": "subagents",
        "title": "多 Agent 协作轨迹",
      },
    ],
    "metrics": [
      {
        "label": "计划编号",
        "tone": "default",
        "value": "plan-demo",
      },
      {
        "label": "校验状态",
        "tone": "success",
        "value": "校验通过",
      },
    ],
    "shareContent": "旅行方案
计划编号：plan-demo
校验：校验通过
子 Agent：规划 -> 研究 -> 校验
<text>",
    "subagentTrail": [
      "规划",
      "研究",
      "校验",
    ],
    "summary": "<text>",
    "summaryLines": [
      "计划编号：plan-demo",
      "校验：校验通过",
      "子 Agent：规划 -> 研究 -> 校验",
    ],
    "title": "旅行方案",
    "warnings": [],
  },
  "html": "<!doctype html>
<html lang="zh-CN">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>旅行方案 | Moyuan Travel Agent</title>
    <style>
      body { margin: 0; font-family: "Segoe UI", "PingFang SC", "Hiragino Sans GB", sans-serif; background: #f8fafc; color: #0f172a; }
      main { max-width: 900px; margin: 0 auto; padding: 32px 24px 48px; }
      .hero { border-radius: 24px; padding: 24px 28px; background: linear-gradient(135deg, #082f49 0%, #0f766e 100%); color: #fff; }
      .hero h1 { margin: 0; font-size: 30px; line-height: 1.2; }
      .delivery-summary { margin: 14px 0 0; font-size: 15px; line-height: 1.7; opacity: 0.92; }
      .delivery-section { margin-top: 18px; padding: 18px 20px; border-radius: 18px; background: #fff; border: 1px solid #e2e8f0; }
      .delivery-section h2 { margin: 0 0 10px; font-size: 16px; }
      .delivery-section ul { margin: 0; padding-left: 18px; display: grid; gap: 8px; }
      .delivery-section li { line-height: 1.6; }
    </style>
  </head>
  <body>
    <main>
      <section class="hero">
        <h1>旅行方案</h1>
        <p class="delivery-summary">&lt;text&gt;</p>
      </section>
      
        <section class="delivery-section">
          <h2>方案概览</h2>
          <ul><li>计划编号：plan-demo</li><li>校验：校验通过</li><li>子 Agent：规划 -&gt; 研究 -&gt; 校验</li></ul>
        </section>
      
        <section class="delivery-section">
          <h2>行程摘要</h2>
          <ul><li>&lt;text&gt;</li></ul>
        </section>
      
        <section class="delivery-section">
          <h2>多 Agent 协作轨迹</h2>
          <ul><li>规划 -&gt; 研究 -&gt; 校验</li></ul>
        </section>
      
    </main>
  </body>
</html>",
  "shareContent": "旅行方案
计划编号：plan-demo
校验：校验通过
子 Agent：规划 -> 研究 -> 校验
<text>",
  "shareTitle": "旅行方案",
}
`;

exports[`travel plan delivery replay snapshot > replays react mode into stable delivery html 1`] = `
{
  "deliveryBundle": {
    "artifact": {
      "answer": "<text>",
      "budget": {
        "executionBudget": {},
        "fallbackSteps": 0,
        "staleResultCount": 0,
        "summary": {},
      },
      "intent": {
        "confidence": null,
        "detail": {},
        "entities": {},
        "name": "general",
      },
      "itinerary": {
        "explanation": "<text>",
        "planId": "plan-demo",
        "steps": [],
        "validationErrors": [],
        "validationStatus": "pass",
      },
      "metadata": {},
      "reasoning": "",
      "research": {
        "destinations": [],
        "evidence": [],
        "sourceTools": [],
        "summary": "",
      },
      "toolsUsed": [],
      "verification": {
        "issues": [],
        "passed": true,
        "refreshTargets": [],
        "shouldRetry": false,
        "summary": "",
      },
    },
    "descriptor": {
      "filenameBase": "travel-plan-plan-demo",
      "htmlDocumentTitle": "旅行方案 | Moyuan Travel Agent",
      "htmlSections": [
        {
          "items": [
            "计划编号：plan-demo",
            "校验：校验通过",
            "子 Agent：规划 -> 研究 -> 校验",
          ],
          "key": "overview",
          "title": "方案概览",
        },
        {
          "items": [
            "<text>",
          ],
          "key": "summary",
          "title": "行程摘要",
        },
        {
          "items": [
            "规划 -> 研究 -> 校验",
          ],
          "key": "subagents",
          "title": "多 Agent 协作轨迹",
        },
      ],
      "metrics": [
        {
          "label": "计划编号",
          "tone": "default",
          "value": "plan-demo",
        },
        {
          "label": "校验状态",
          "tone": "success",
          "value": "校验通过",
        },
      ],
      "shareContent": "旅行方案
计划编号：plan-demo
校验：校验通过
子 Agent：规划 -> 研究 -> 校验
<text>",
      "subagentTrail": [
        "规划",
        "研究",
        "校验",
      ],
      "summary": "<text>",
      "summaryLines": [
        "计划编号：plan-demo",
        "校验：校验通过",
        "子 Agent：规划 -> 研究 -> 校验",
      ],
      "title": "旅行方案",
      "warnings": [],
    },
    "executionReceipt": {},
    "htmlContent": "<!doctype html>
<html lang="zh-CN">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>旅行方案 | Moyuan Travel Agent</title>
    <style>
      body { margin: 0; font-family: "Segoe UI", "PingFang SC", "Hiragino Sans GB", sans-serif; background: #f8fafc; color: #0f172a; }
      main { max-width: 900px; margin: 0 auto; padding: 32px 24px 48px; }
      .hero { border-radius: 24px; padding: 24px 28px; background: linear-gradient(135deg, #082f49 0%, #0f766e 100%); color: #fff; }
      .hero h1 { margin: 0; font-size: 30px; line-height: 1.2; }
      .delivery-summary { margin: 14px 0 0; font-size: 15px; line-height: 1.7; opacity: 0.92; }
      .delivery-section { margin-top: 18px; padding: 18px 20px; border-radius: 18px; background: #fff; border: 1px solid #e2e8f0; }
      .delivery-section h2 { margin: 0 0 10px; font-size: 16px; }
      .delivery-section ul { margin: 0; padding-left: 18px; display: grid; gap: 8px; }
      .delivery-section li { line-height: 1.6; }
    </style>
  </head>
  <body>
    <main>
      <section class="hero">
        <h1>旅行方案</h1>
        <p class="delivery-summary">&lt;text&gt;</p>
      </section>
      
        <section class="delivery-section">
          <h2>方案概览</h2>
          <ul><li>计划编号：plan-demo</li><li>校验：校验通过</li><li>子 Agent：规划 -&gt; 研究 -&gt; 校验</li></ul>
        </section>
      
        <section class="delivery-section">
          <h2>行程摘要</h2>
          <ul><li>&lt;text&gt;</li></ul>
        </section>
      
        <section class="delivery-section">
          <h2>多 Agent 协作轨迹</h2>
          <ul><li>规划 -&gt; 研究 -&gt; 校验</li></ul>
        </section>
      
    </main>
  </body>
</html>",
    "schemaVersion": "2026-03-29",
    "share": {
      "content": "旅行方案
计划编号：plan-demo
校验：校验通过
子 Agent：规划 -> 研究 -> 校验
<text>",
      "title": "旅行方案",
    },
  },
  "descriptor": {
    "filenameBase": "travel-plan-plan-demo",
    "htmlDocumentTitle": "旅行方案 | Moyuan Travel Agent",
    "htmlSections": [
      {
        "items": [
          "计划编号：plan-demo",
          "校验：校验通过",
          "子 Agent：规划 -> 研究 -> 校验",
        ],
        "key": "overview",
        "title": "方案概览",
      },
      {
        "items": [
          "<text>",
        ],
        "key": "summary",
        "title": "行程摘要",
      },
      {
        "items": [
          "规划 -> 研究 -> 校验",
        ],
        "key": "subagents",
        "title": "多 Agent 协作轨迹",
      },
    ],
    "metrics": [
      {
        "label": "计划编号",
        "tone": "default",
        "value": "plan-demo",
      },
      {
        "label": "校验状态",
        "tone": "success",
        "value": "校验通过",
      },
    ],
    "shareContent": "旅行方案
计划编号：plan-demo
校验：校验通过
子 Agent：规划 -> 研究 -> 校验
<text>",
    "subagentTrail": [
      "规划",
      "研究",
      "校验",
    ],
    "summary": "<text>",
    "summaryLines": [
      "计划编号：plan-demo",
      "校验：校验通过",
      "子 Agent：规划 -> 研究 -> 校验",
    ],
    "title": "旅行方案",
    "warnings": [],
  },
  "html": "<!doctype html>
<html lang="zh-CN">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>旅行方案 | Moyuan Travel Agent</title>
    <style>
      body { margin: 0; font-family: "Segoe UI", "PingFang SC", "Hiragino Sans GB", sans-serif; background: #f8fafc; color: #0f172a; }
      main { max-width: 900px; margin: 0 auto; padding: 32px 24px 48px; }
      .hero { border-radius: 24px; padding: 24px 28px; background: linear-gradient(135deg, #082f49 0%, #0f766e 100%); color: #fff; }
      .hero h1 { margin: 0; font-size: 30px; line-height: 1.2; }
      .delivery-summary { margin: 14px 0 0; font-size: 15px; line-height: 1.7; opacity: 0.92; }
      .delivery-section { margin-top: 18px; padding: 18px 20px; border-radius: 18px; background: #fff; border: 1px solid #e2e8f0; }
      .delivery-section h2 { margin: 0 0 10px; font-size: 16px; }
      .delivery-section ul { margin: 0; padding-left: 18px; display: grid; gap: 8px; }
      .delivery-section li { line-height: 1.6; }
    </style>
  </head>
  <body>
    <main>
      <section class="hero">
        <h1>旅行方案</h1>
        <p class="delivery-summary">&lt;text&gt;</p>
      </section>
      
        <section class="delivery-section">
          <h2>方案概览</h2>
          <ul><li>计划编号：plan-demo</li><li>校验：校验通过</li><li>子 Agent：规划 -&gt; 研究 -&gt; 校验</li></ul>
        </section>
      
        <section class="delivery-section">
          <h2>行程摘要</h2>
          <ul><li>&lt;text&gt;</li></ul>
        </section>
      
        <section class="delivery-section">
          <h2>多 Agent 协作轨迹</h2>
          <ul><li>规划 -&gt; 研究 -&gt; 校验</li></ul>
        </section>
      
    </main>
  </body>
</html>",
  "shareContent": "旅行方案
计划编号：plan-demo
校验：校验通过
子 Agent：规划 -> 研究 -> 校验
<text>",
  "shareTitle": "旅行方案",
}
`;
